# automaton-auditor

./: .env.example  .gitignore  Dockerfile  README.md  main.py  make_pdf.py  pyproject.toml
.github/workflows/: ci.yml
audit/: report.md
audit/report_bypeer_received/: report.md
audit/report_onpeer_generated/: report.md
audit/report_onself_generated/: report.md
reports/: interim_report.md
src/: graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
tests/: test_doc_tools.py  test_judges.py  test_justice.py  test_repo_tools.py
